--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-reanimated": "^1.1.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.1",
-    "react-navigation-stack": "^1.5.3"
+    "react-navigation-stack": "^1.5.3",
+    "react-navigation-tabs": "^2.5.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
